--- a/index.html
+++ b/index.html
@@ -1,27 +1,51 @@
 <!DOCTYPE html>
 <html>
+<style>
+    body,
+    html {
+        height: 100%;
+        margin: 0;
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ㅇㅇ</title>
-</head>
+    .bgimg {
+        background-image: url('bgimg.jpg');
+        height: 100%;
+        background-position: center;
+        background-size: cover;
+        position: relative;
+        color: white;
+        font-family: "Courier New", Courier, monospace;
+        font-size: 25px;
+    }
+
+    .middle {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+</style>
 
 <body>
-    <p id="element"></p>
+
+    <div class="bgimg">
+        <div class="middle">
+            <p id="demo" style="font-size:30px"></p>
+        </div>
+    </div>
 
     <script>
         // Set the date we're counting down to
-        var countDownDate = new Date("sep 17, 2021 0:0:0").getTime();
+        var countDownDate = new Date("Sep 17, 2021 0:0:0").getTime();
 
         // Update the count down every 1 second
-        var x = setInterval(function () {
+        var countdownfunction = setInterval(function () {
 
-            // Get today's date and time
+            // Get todays date and time
             var now = new Date().getTime();
 
-            // Find the distance between now and the count down date
+            // Find the distance between now an the count down date
             var distance = countDownDate - now;
 
             // Time calculations for days, hours, minutes and seconds
@@ -30,17 +54,18 @@
             var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
             var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-            // Display the result in the element with id="demo"
-            document.getElementById("element").innerHTML = days + "d " + hours + "h "
+            // Output the result in an element with id="demo"
+            document.getElementById("demo").innerHTML = days + "d " + hours + "h "
                 + minutes + "m " + seconds + "s ";
 
-            // If the count down is finished, write some text
+            // If the count down is over, write some text 
             if (distance < 0) {
-                clearInterval(x);
-                document.getElementById("element").innerHTML = "고딩소녀는 오늘도 그릴까?";
+                clearInterval(countdownfunction);
+                document.getElementById("demo").innerHTML = "EXPIRED";
             }
         }, 1000);
     </script>
+
 </body>
 
 </html>
