--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html>
-<style>
-    body,
-    html {
-        height: 100%;
-        margin: 0;
-    }
 
-    .bgimg {
-        background-image: url('bgimg.jpg');
-        height: 100%;
-        background-position: center;
-        background-size: cover;
-        position: relative;
-        color: white;
-        font-family: "Courier New", Courier, monospace;
-        font-size: 25px;
-    }
+<head>
+    <style>
+        body,
+        html {
+            height: 100%;
+            margin: 0;
+        }
 
-    .middle {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
-</style>
+        .bgimg {
+            background-image: url('bgimg.jpg');
+            height: 100%;
+            background-position: center;
+            background-size: cover;
+            position: relative;
+            color: white;
+            font-family: "Courier New", Courier, monospace;
+            font-size: 25px;
+        }
 
-<body>
+        .middle {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+    </style>
+    <link rel="stylesheet" href="style.css">
+    <title></title>
+    <script>
+        window.console = window.console || function (t) { };
+    </script>
+
+    <script>
+        if (document.location.search.match(/type=embed/gi)) {
+            window.parent.postMessage("resize", "*");
+        }
+    </script>
+</head>
+
+
+<body translate="no" style="overflow-x: hidden;">
 
     <div class="bgimg">
         <div class="middle">
@@ -66,6 +81,252 @@
         }, 1000);
     </script>
 
+
+
+
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>
+        $(window).load(function () {
+            $('body').sakura();
+        });
+    </script>
+    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-8216c69d01441f36c0ea791ae2d4469f0f8ff5326f00ae2d00e4bb7d20e24edb.js"></script>
+
+    <script id="rendered-js">
+        (function ($) {
+            // requestAnimationFrame Polyfill
+            (function () {
+                var lastTime = 0;
+                var vendors = ['ms', 'moz', 'webkit', 'o'];
+
+                for (var x = 0; x < vendors.length && !window.requestAnimationFrame; ++x) {
+                    window.requestAnimationFrame = window[vendors[x] + 'RequestAnimationFrame'];
+                    window.cancelAnimationFrame = window[vendors[x] + 'CancelAnimationFrame'] || window[vendors[x] + 'CancelRequestAnimationFrame'];
+                }
+
+                if (!window.requestAnimationFrame)
+                    window.requestAnimationFrame = function (callback, element) {
+                        var currTime = new Date().getTime();
+                        var timeToCall = Math.max(0, 16 - (currTime - lastTime));
+                        var id = window.setTimeout(function () {
+                            callback(currTime + timeToCall);
+                        },
+                            timeToCall);
+                        lastTime = currTime + timeToCall;
+
+                        return id;
+                    };
+
+                if (!window.cancelAnimationFrame)
+                    window.cancelAnimationFrame = function (id) {
+                        clearTimeout(id);
+                    };
+            })();
+
+            // Sakura function.
+            $.fn.sakura = function (options) {
+                // We rely on these random values a lot, so define a helper function for it.
+                function getRandomInt(min, max) {
+                    return Math.floor(Math.random() * (max - min + 1)) + min;
+                }
+
+                // Helper function to attach cross-browser events to an element.
+                var prefixes = ['moz', 'ms', 'o', 'webkit', ''];
+                var prefCount = prefixes.length;
+
+                function prefixedEvent(element, type, callback) {
+                    for (var i = 0; i < prefCount; i++) {
+                        if (!prefixes[i]) {
+                            type = type.toLowerCase();
+                        }
+
+                        element.get(0).addEventListener(prefixes[i] + type, callback, false);
+                    }
+                }
+
+                // Defaults for the option object, which gets extended below.
+                var defaults = {
+                    blowAnimations: ['blow-soft-left', 'blow-medium-left', 'blow-hard-left', 'blow-soft-right', 'blow-medium-right', 'blow-hard-right'],
+                    className: 'sakura',
+                    fallSpeed: 3,
+                    maxSize: 14,
+                    minSize: 9,
+                    newOn: 300,
+                    swayAnimations: ['sway-0', 'sway-1', 'sway-2', 'sway-3', 'sway-4', 'sway-5', 'sway-6', 'sway-7', 'sway-8']
+                };
+
+
+                var options = $.extend({}, defaults, options);
+
+                // Declarations.
+                var documentHeight = $(document).height();
+                var documentWidth = $(document).width();
+                var sakura = $('<div class="' + options.className + '" />');
+
+                // Set the overflow-x CSS property on the body to prevent horizontal scrollbars.
+                $('body').css({ 'overflow-x': 'hidden' });
+
+                // Function that inserts new petals into the document.
+                var petalCreator = function () {
+                    setTimeout(function () {
+                        requestAnimationFrame(petalCreator);
+                    }, options.newOn);
+
+                    // Get one random animation of each type and randomize fall time of the petals.
+                    var blowAnimation = options.blowAnimations[Math.floor(Math.random() * options.blowAnimations.length)];
+                    var swayAnimation = options.swayAnimations[Math.floor(Math.random() * options.swayAnimations.length)];
+                    var fallTime = (Math.round(documentHeight * 0.007) + Math.random() * 5) * options.fallSpeed;
+
+                    var animations = 'fall ' + fallTime + 's linear 0s 1' + ', ' +
+                        blowAnimation + ' ' + ((fallTime > 30 ? fallTime : 30) - 20 + getRandomInt(0, 20)) + 's linear 0s infinite' + ', ' +
+                        swayAnimation + ' ' + getRandomInt(2, 4) + 's linear 0s infinite';
+                    var petal = sakura.clone();
+                    var size = getRandomInt(options.minSize, options.maxSize);
+                    var startPosLeft = Math.random() * documentWidth - 100;
+                    var startPosTop = -(Math.random() * 20 + 15);
+
+                    // Apply Event Listener to remove petals that reach the bottom of the page.
+                    prefixedEvent(petal, 'AnimationEnd', function () {
+                        $(this).remove();
+                    });
+
+                    // Apply Event Listener to remove petals that finish their horizontal float animation.
+                    prefixedEvent(petal, 'AnimationIteration', function (ev) {
+                        if ($.inArray(ev.animationName, options.blowAnimations) != -1) {
+                            $(this).remove();
+                        }
+                    });
+
+                    petal.
+                        css({
+                            '-webkit-animation': animations,
+                            '-o-animation': animations,
+                            '-ms-animation': animations,
+                            '-moz-animation': animations,
+                            animation: animations,
+                            height: size,
+                            left: startPosLeft,
+                            'margin-top': startPosTop,
+                            width: size
+                        }).
+
+                        appendTo('body');
+                };
+
+
+                // Recalculate documentHeight and documentWidth on browser resize.
+                $(window).resize(function () {
+                    documentHeight = $(document).height();
+                    documentWidth = $(document).width();
+                });
+
+                // Finally: Start adding petals.
+                requestAnimationFrame(petalCreator);
+            };
+        })(jQuery);
+  //# sourceURL=pen.js
+    </script>
+
+    <div class="sakura"
+        style="animation: 15.9805s linear 0s 1 normal none running fall, 26s linear 0s infinite normal none running blow-soft-left, 2s linear 0s infinite normal none running sway-3; height: 9px; left: 651.857px; margin-top: -24.0006px; width: 9px;">
+    </div>
+    <div class="sakura"
+        style="animation: 15.5709s linear 0s 1 normal none running fall, 27s linear 0s infinite normal none running blow-medium-right, 3s linear 0s infinite normal none running sway-5; height: 12px; left: 526.628px; margin-top: -31.4386px; width: 12px;">
+    </div>
+    <div class="sakura"
+        style="animation: 15.5135s linear 0s 1 normal none running fall, 25s linear 0s infinite normal none running blow-medium-left, 2s linear 0s infinite normal none running sway-5; height: 14px; left: 456.265px; margin-top: -23.8717px; width: 14px;">
+    </div>
+    <div class="sakura"
+        style="animation: 14.1938s linear 0s 1 normal none running fall, 27s linear 0s infinite normal none running blow-hard-left, 4s linear 0s infinite normal none running sway-6; height: 10px; left: 350.814px; margin-top: -22.9155px; width: 10px;">
+    </div>
+    <div class="sakura"
+        style="animation: 17.6174s linear 0s 1 normal none running fall, 15s linear 0s infinite normal none running blow-hard-left, 3s linear 0s infinite normal none running sway-2; height: 12px; left: 315.077px; margin-top: -26.3921px; width: 12px;">
+    </div>
+    <div class="sakura"
+        style="animation: 11.6933s linear 0s 1 normal none running fall, 15s linear 0s infinite normal none running blow-hard-left, 4s linear 0s infinite normal none running sway-1; height: 10px; left: 932.98px; margin-top: -20.2583px; width: 10px;">
+    </div>
+    <div class="sakura"
+        style="animation: 13.7309s linear 0s 1 normal none running fall, 16s linear 0s infinite normal none running blow-hard-left, 3s linear 0s infinite normal none running sway-5; height: 12px; left: 848.566px; margin-top: -27.946px; width: 12px;">
+    </div>
+    <div class="sakura"
+        style="animation: 17.4079s linear 0s 1 normal none running fall, 25s linear 0s infinite normal none running blow-hard-left, 4s linear 0s infinite normal none running sway-2; height: 13px; left: 580.64px; margin-top: -19.7961px; width: 13px;">
+    </div>
+    <div class="sakura"
+        style="animation: 13.9805s linear 0s 1 normal none running fall, 23s linear 0s infinite normal none running blow-hard-left, 4s linear 0s infinite normal none running sway-0; height: 9px; left: 871.66px; margin-top: -19.8511px; width: 9px;">
+    </div>
+    <div class="sakura"
+        style="animation: 16.2684s linear 0s 1 normal none running fall, 21s linear 0s infinite normal none running blow-medium-left, 3s linear 0s infinite normal none running sway-7; height: 13px; left: 543.595px; margin-top: -33.935px; width: 13px;">
+    </div>
+    <div class="sakura"
+        style="animation: 13.1519s linear 0s 1 normal none running fall, 16s linear 0s infinite normal none running blow-hard-right, 2s linear 0s infinite normal none running sway-4; height: 9px; left: 941.914px; margin-top: -21.2422px; width: 9px;">
+    </div>
+    <div class="sakura"
+        style="animation: 12.5181s linear 0s 1 normal none running fall, 11s linear 0s infinite normal none running blow-hard-left, 3s linear 0s infinite normal none running sway-0; height: 14px; left: 152.505px; margin-top: -31.7818px; width: 14px;">
+    </div>
+    <div class="sakura"
+        style="animation: 8.53961s linear 0s 1 normal none running fall, 26s linear 0s infinite normal none running blow-hard-left, 3s linear 0s infinite normal none running sway-4; height: 14px; left: 421.834px; margin-top: -27.1142px; width: 14px;">
+    </div>
+    <div class="sakura"
+        style="animation: 15.2435s linear 0s 1 normal none running fall, 16s linear 0s infinite normal none running blow-hard-right, 2s linear 0s infinite normal none running sway-8; height: 13px; left: 822.652px; margin-top: -23.1447px; width: 13px;">
+    </div>
+    <div class="sakura"
+        style="animation: 15.1277s linear 0s 1 normal none running fall, 11s linear 0s infinite normal none running blow-hard-left, 4s linear 0s infinite normal none running sway-3; height: 10px; left: 1062.2px; margin-top: -26.6931px; width: 10px;">
+    </div>
+    <div class="sakura"
+        style="animation: 16.6461s linear 0s 1 normal none running fall, 13s linear 0s infinite normal none running blow-medium-right, 3s linear 0s infinite normal none running sway-0; height: 11px; left: 636.842px; margin-top: -28.6539px; width: 11px;">
+    </div>
+    <div class="sakura"
+        style="animation: 5.91718s linear 0s 1 normal none running fall, 14s linear 0s infinite normal none running blow-medium-left, 4s linear 0s infinite normal none running sway-7; height: 12px; left: 487.358px; margin-top: -16.3867px; width: 12px;">
+    </div>
+    <div class="sakura"
+        style="animation: 11.4915s linear 0s 1 normal none running fall, 15s linear 0s infinite normal none running blow-hard-left, 3s linear 0s infinite normal none running sway-5; height: 9px; left: 504.072px; margin-top: -28.2082px; width: 9px;">
+    </div>
+    <div class="sakura"
+        style="animation: 24.3676s linear 0s 1 normal none running fall, 27s linear 0s infinite normal none running blow-hard-left, 2s linear 0s infinite normal none running sway-3; height: 10px; left: 399.854px; margin-top: -15.2765px; width: 10px;">
+    </div>
+    <div class="sakura"
+        style="animation: 17.0229s linear 0s 1 normal none running fall, 15s linear 0s infinite normal none running blow-medium-left, 4s linear 0s infinite normal none running sway-3; height: 9px; left: 122.49px; margin-top: -30.8873px; width: 9px;">
+    </div>
+    <div class="sakura"
+        style="animation: 15.4613s linear 0s 1 normal none running fall, 13s linear 0s infinite normal none running blow-soft-right, 4s linear 0s infinite normal none running sway-6; height: 14px; left: 431.06px; margin-top: -15.6344px; width: 14px;">
+    </div>
+    <div class="sakura"
+        style="animation: 17.2059s linear 0s 1 normal none running fall, 25s linear 0s infinite normal none running blow-medium-right, 3s linear 0s infinite normal none running sway-6; height: 13px; left: 495.542px; margin-top: -15.3653px; width: 13px;">
+    </div>
+    <div class="sakura"
+        style="animation: 9.08332s linear 0s 1 normal none running fall, 27s linear 0s infinite normal none running blow-medium-right, 4s linear 0s infinite normal none running sway-1; height: 11px; left: 526.531px; margin-top: -17.9494px; width: 11px;">
+    </div>
+    <div class="sakura"
+        style="animation: 7.67594s linear 0s 1 normal none running fall, 15s linear 0s infinite normal none running blow-soft-right, 3s linear 0s infinite normal none running sway-2; height: 9px; left: 619.941px; margin-top: -26.7607px; width: 9px;">
+    </div>
+    <div class="sakura"
+        style="animation: 10.0501s linear 0s 1 normal none running fall, 14s linear 0s infinite normal none running blow-soft-right, 4s linear 0s infinite normal none running sway-3; height: 14px; left: 844.578px; margin-top: -21.0455px; width: 14px;">
+    </div>
+    <div class="sakura"
+        style="animation: 17.2498s linear 0s 1 normal none running fall, 26s linear 0s infinite normal none running blow-medium-left, 3s linear 0s infinite normal none running sway-7; height: 11px; left: 499.806px; margin-top: -19.9275px; width: 11px;">
+    </div>
+    <div class="sakura"
+        style="animation: 12.3811s linear 0s 1 normal none running fall, 11s linear 0s infinite normal none running blow-soft-right, 3s linear 0s infinite normal none running sway-7; height: 11px; left: 210.951px; margin-top: -26.7463px; width: 11px;">
+    </div>
+    <div class="sakura"
+        style="animation: 7.7905s linear 0s 1 normal none running fall, 20s linear 0s infinite normal none running blow-medium-right, 4s linear 0s infinite normal none running sway-4; height: 10px; left: 4.12355px; margin-top: -28.2456px; width: 10px;">
+    </div>
+    <div class="sakura"
+        style="animation: 7.33145s linear 0s 1 normal none running fall, 10s linear 0s infinite normal none running blow-soft-left, 2s linear 0s infinite normal none running sway-4; height: 9px; left: 112.805px; margin-top: -16.2888px; width: 9px;">
+    </div>
+    <div class="sakura"
+        style="animation: 12.4764s linear 0s 1 normal none running fall, 17s linear 0s infinite normal none running blow-soft-left, 3s linear 0s infinite normal none running sway-7; height: 10px; left: 167.619px; margin-top: -17.2398px; width: 10px;">
+    </div>
+    <div class="sakura"
+        style="animation: 8.26632s linear 0s 1 normal none running fall, 11s linear 0s infinite normal none running blow-medium-left, 3s linear 0s infinite normal none running sway-3; height: 13px; left: 552.147px; margin-top: -16.5063px; width: 13px;">
+    </div>
+    <div class="sakura"
+        style="animation: 19.9847s linear 0s 1 normal none running fall, 25s linear 0s infinite normal none running blow-soft-right, 3s linear 0s infinite normal none running sway-4; height: 12px; left: 260.222px; margin-top: -17.6837px; width: 12px;">
+    </div>
 </body>
 
 </html>
