--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             // If the count down is over, write some text 
             if (distance < 0) {
                 clearInterval(countdownfunction);
-                document.getElementById("demo").innerHTML = "고딩 어그로였.......(미안)";
+                document.getElementById("demo").innerHTML = "고딩 고백데이이지만 어그로였음.......(미안ㅈㅅㅈㅅ)";
             }
         }, 1000);
     </script>
