--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
   //# sourceURL=pen.js
     </script>
 
-    <div class="sakura"
-        style="animation: 15.9805s linear 0s 1 normal none running fall, 26s linear 0s infinite normal none running blow-soft-left, 2s linear 0s infinite normal none running sway-3; height: 9px; left: 651.857px; margin-top: -24.0006px; width: 9px;">
+    <div class="sakura">
     </div>
     <div class="bgimg">
         <div class="middle">
