--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             // If the count down is over, write some text 
             if (distance < 0) {
                 clearInterval(countdownfunction);
-                document.getElementById("demo").innerHTML = "고딩 고백데이이지만 어그로였음.......(미안ㅈㅅㅈㅅ)";
+                document.getElementById("demo").innerHTML = "고딩 사실 나 너 좋아해......";
             }
         }, 1000);
     </script>
