--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             // If the count down is over, write some text 
             if (distance < 0) {
                 clearInterval(countdownfunction);
-                document.getElementById("demo").innerHTML = "고딩님 매력 귀엽고 사랑스럽고 친근하고 친절하고 그림잘그림 한번 오프라인으로 만나보고싶...";
+                document.getElementById("demo").innerHTML = "고딩님...좋아해요......";
             }
         }, 1000);
     </script>
